Enhance response error message more user friendly.